{
  "version": 4,
  "terraform_version": "1.0.11",
  "serial": 1313,
  "lineage": "78c03383-47ef-2cd9-130b-0fd58c8de929",
  "resources": [
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "utopia_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:902316339693:internet-gateway/igw-0566bd3f8490dbd48",
            "id": "igw-0566bd3f8490dbd48",
            "owner_id": "902316339693",
            "tags": {
              "Name": "AP_TF_GT"
            },
            "tags_all": {
              "Name": "AP_TF_GT"
            },
            "vpc_id": "vpc-037c1a62618feab3e"
          },
          "dependencies": [
            "module.network.aws_vpc.utopia_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:902316339693:route-table/rtb-0fa2a30376e9c2718",
            "id": "rtb-0fa2a30376e9c2718",
            "owner_id": "902316339693",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0566bd3f8490dbd48",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "AP_TF_BastionRouteTable"
            },
            "tags_all": {
              "Name": "AP_TF_BastionRouteTable"
            },
            "timeouts": null,
            "vpc_id": "vpc-037c1a62618feab3e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.utopia_vpc",
            "module.network.aws_internet_gateway.utopia_gateway"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:902316339693:route-table/rtb-04f7e41b44a5de04c",
            "id": "rtb-04f7e41b44a5de04c",
            "owner_id": "902316339693",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0566bd3f8490dbd48",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "AP_TF_BastionRouteTable"
            },
            "tags_all": {
              "Name": "AP_TF_BastionRouteTable"
            },
            "timeouts": null,
            "vpc_id": "vpc-037c1a62618feab3e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.utopia_vpc",
            "module.network.aws_internet_gateway.utopia_gateway"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_rt_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08d649511949dde53",
            "route_table_id": "rtb-0fa2a30376e9c2718",
            "subnet_id": "subnet-0147069d6c7e57994"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.utopia_gateway",
            "module.network.aws_route_table.public_rt",
            "module.network.aws_subnet.public_subnet",
            "module.network.aws_vpc.utopia_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04b400d46df3e9e06",
            "route_table_id": "rtb-04f7e41b44a5de04c",
            "subnet_id": "subnet-02ea7b32837fa1615"
          },
          "dependencies": [
            "module.network.aws_route_table.public_rt",
            "module.network.aws_subnet.public_subnet",
            "module.network.aws_vpc.utopia_vpc",
            "module.network.aws_internet_gateway.utopia_gateway"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:902316339693:subnet/subnet-0ab261fcbfbe5cb8c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-0ab261fcbfbe5cb8c",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "902316339693",
            "tags": {
              "Name": "AP_TF_PrivateSubnet"
            },
            "tags_all": {
              "Name": "AP_TF_PrivateSubnet"
            },
            "vpc_id": "vpc-037c1a62618feab3e"
          },
          "dependencies": [
            "module.network.aws_vpc.utopia_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:902316339693:subnet/subnet-0147069d6c7e57994",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0147069d6c7e57994",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "902316339693",
            "tags": {
              "Name": "AP_TF_PublicSubnet"
            },
            "tags_all": {
              "Name": "AP_TF_PublicSubnet"
            },
            "vpc_id": "vpc-037c1a62618feab3e"
          },
          "dependencies": [
            "module.network.aws_vpc.utopia_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:902316339693:subnet/subnet-02ea7b32837fa1615",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-02ea7b32837fa1615",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "902316339693",
            "tags": {
              "Name": "AP_TF_PublicSubnet"
            },
            "tags_all": {
              "Name": "AP_TF_PublicSubnet"
            },
            "vpc_id": "vpc-037c1a62618feab3e"
          },
          "dependencies": [
            "module.network.aws_vpc.utopia_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "utopia_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:902316339693:vpc/vpc-037c1a62618feab3e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0386237ffada08d16",
            "default_route_table_id": "rtb-0e5fc5e5477410041",
            "default_security_group_id": "sg-0a765fa649fb84535",
            "dhcp_options_id": "dopt-00a769e81a563d410",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-037c1a62618feab3e",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0e5fc5e5477410041",
            "owner_id": "902316339693",
            "tags": {
              "Name": "AP_TF_VPC"
            },
            "tags_all": {
              "Name": "AP_TF_VPC"
            }
          }
        }
      ]
    },
    {
      "module": "module.public",
      "mode": "managed",
      "type": "aws_instance",
      "name": "jenkins",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-002068ed284fb165b",
            "arn": "arn:aws:ec2:us-east-2:902316339693:instance/i-0a7c842a4eae5ed2e",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "terraform-20220131185525111300000001",
            "id": "i-0a7c842a4eae5ed2e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_interface_id": "eni-08cafa5d82bb9db71"
              }
            ],
            "primary_network_interface_id": "eni-08cafa5d82bb9db71",
            "private_dns": "ip-10-0-1-13.us-east-2.compute.internal",
            "private_ip": "10.0.1.13",
            "public_ip": "3.21.246.176",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0c740f5680ddb61af",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0147069d6c7e57994",
            "tags": {
              "Name": "AP_TF_Jenkins"
            },
            "tags_all": {
              "Name": "AP_TF_Jenkins"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0a69587a1c5b3729d"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "user_data"
              }
            ]
          ],
          "dependencies": [
            "module.network.aws_vpc.utopia_vpc",
            "module.public.aws_iam_instance_profile.jenkins",
            "module.public.aws_iam_role.jenkins",
            "module.public.aws_iam_role_policy.jenkins",
            "module.public.aws_network_interface.jenkins",
            "module.public.aws_security_group.jenkins",
            "module.network.aws_subnet.public_subnet"
          ]
        }
      ]
    },
    {
      "module": "module.public",
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "jenkins",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:902316339693:network-interface/eni-08cafa5d82bb9db71",
            "attachment": [
              {
                "attachment_id": "eni-attach-0ae78e84868761d3d",
                "device_index": 0,
                "instance": "i-0a7c842a4eae5ed2e"
              }
            ],
            "id": "eni-08cafa5d82bb9db71",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_prefix_count": 0,
            "mac_address": "02:2c:ca:b5:e7:6e",
            "owner_id": "902316339693",
            "private_ip": "10.0.1.13",
            "private_ips": [
              "10.0.1.13"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0a69587a1c5b3729d"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0147069d6c7e57994",
            "tags": {
              "Name": "AP_TF_JenkinsNIC"
            },
            "tags_all": {
              "Name": "AP_TF_JenkinsNIC"
            }
          },
          "dependencies": [
            "module.network.aws_vpc.utopia_vpc",
            "module.public.aws_security_group.jenkins",
            "module.network.aws_subnet.public_subnet"
          ]
        }
      ]
    },
    {
      "module": "module.public",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "jenkins",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:902316339693:security-group/sg-0a69587a1c5b3729d",
            "description": "Security group for the Jenkins server",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a69587a1c5b3729d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8082
              }
            ],
            "name": "Jenkins Security Group",
            "name_prefix": "",
            "owner_id": "902316339693",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Jenkins Security Group"
            },
            "tags_all": {
              "Name": "Jenkins Security Group"
            },
            "timeouts": null,
            "vpc_id": "vpc-037c1a62618feab3e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.utopia_vpc"
          ]
        }
      ]
    }
  ]
}